[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -447,6 +447,7 @@ admin.panels=Panels
 admin.panels.panelwizard.description=Ajoutez ou supprimez des panels, changez l'organisation des panels
 admin.panelwizard=Organiseur de panels
 admin.placetoadminister=Place \u00E0 administrer
+admin.preferences.title=Pr\u00E9f\u00E9rences
 admin.presentation=Pr\u00E9sentation
 admin.presentation.description=Modifiez l\u2019en-t\u00EAte, changez l'affichage des panels, personnalisez la skin et le th\u00E8me de couleur.
 admin.programming=Programmation
@@ -455,6 +456,7 @@ admin.registration=Inscriptions
 admin.registration.description=R\u00E9glages de l'enregistrement des utilisateurs
 admin.rights=Droits d'acc\u00E8s
 admin.rights.description=G\u00E9rez les droits d'acc\u00E8s pour les groupes et les utilisateurs \: contr\u00F4lez qui peut voir, modifier et supprimer les pages.
+admin.rights.info=Ces droits s''appliquent sur cette page {0}et tous {1}ses enfants{2}{3}.
 admin.save=Enregistrer
 admin.search=Recherche
 admin.search.description=Choisissez le moteur de recherche par d\u00E9faut ou configurez l'index Lucene.
@@ -724,6 +726,7 @@ core.copy.children.hint=Copier aussi les pages enfants de la page d'origine
 core.copy.copydoc=Copier la page
 core.copy.copyingdoc=Page {0} copi\u00E9e vers {1} avec succ\u00E8s.
 core.copy.language.hint=Traduction de la page d'origine
+core.copy.source.hint=La page qui va \u00EAtre copi\u00E9e
 core.copy.source.label=Source
 core.copy.sourcedoc=Page source
 core.copy.sourcedoc.hint=Emplacement de la page d'origine
@@ -734,6 +737,7 @@ core.copy.sourcespace.hint=Emplacement de l'espace d'origine
 core.copy.sourcewiki=Wiki Source
 core.copy.sourcewiki.hint=Emplacement du wiki d'origine
 core.copy.submit=Copier
+core.copy.target.location.hint=L'endroit o\u00F9 copier la page
 core.copy.target.location.label=Emplacement de la copie
 core.copy.target.name.hint=La copie peut avoir un nom diff\u00E9rent de la page d'origine
 core.copy.target.name.label=Nom
@@ -772,6 +776,7 @@ core.create.space.error.docalreadyexists=L''espace {0} existe d\u00E9j\u00E0. Me
 core.create.space.hint=Nom du nouvel espace
 core.create.space.template.empty=Page d'accueil vide
 core.create.space.template.hint=Mod\u00E8le \u00E0 utiliser pour la page d'accueil du nouvel espace
+core.create.spaceReference.hint=Parent de la nouvelle page (laissez vide pour une page de 1ier niveau).
 core.create.spaceReference.label=Parent
 core.create.spaceTitle=Cr\u00E9er un espace
 core.create.template=Mod\u00E8le de page
@@ -784,6 +789,7 @@ core.create.title=Titre
 core.create.title.hint=Titre de la nouvelle page
 core.create.type=Type de page
 core.create.type.blank=Page blanche
+core.create.type.blank.description=Page vide standard
 core.create.type.default=Par d\u00E9faut
 core.create.type.templates=Mod\u00E8les
 core.create.validation.mandatoryfield=Champs obligatoire
@@ -796,6 +802,10 @@ core.delete.confirm.yes=Oui, d\u00E9truire cette page
 core.delete.confirmWithInlinks=Par ailleurs, il n'est pas possible de r\u00E9cup\u00E9rer un document supprim\u00E9. \u00CAtes-vous s\u00FBr de vouloir continuer ?
 core.delete.error=Des erreurs ont eu lieu \:
 core.delete.orphansWarning=Les documents suivants ont ce document comme parent \:{0}En supprimant ce document, ils seront orphelins.
+core.delete.success=La page a \u00E9t\u00E9 supprim\u00E9e
+core.delete.title=Supprimer {0}
+core.delete.waitmessage=Veuillez patienter pendant la suppression de la page.
+core.documentPicker.cancel=Annuler
 core.edit.wikiToolbar.bold=Gras
 core.edit.wikiToolbar.boldtext=Texte en gras
 core.edit.wikiToolbar.elink=Lien externe (n'oubliez pas http\://)
@@ -948,6 +958,7 @@ core.importer.whenDocumentAlreadyExists=Quand un document existe d\u00E9j\u00E0 
 core.links.content=Contenu
 core.menu.actions=Actions
 core.menu.admin=Administration
+core.menu.admin.page=Administrer la page
 core.menu.admin.space=Administrer l''espace \: {0}
 core.menu.admin.wiki=Administrer le wiki
 core.menu.content.title=Actions relatives \u00E0 la page \:
@@ -1058,12 +1069,20 @@ core.rename.newpage.hint=Nouveau nom pour cette page
 core.rename.newspace=Nouvel espace
 core.rename.newspace.hint=Nom de l'espace contenant la page renomm\u00E9e
 core.rename.nonexistingDocument=Ce document n'existe pas.
+core.rename.source.hint=La page va \u00EAtre renomm\u00E9e
 core.rename.sourcepage=Page d'Origine
 core.rename.sourcepage.hint=Emplacement de la page d'Origine
 core.rename.sourcespace=Espace d'Origine
 core.rename.sourcespace.hint=Emplacement de l'espace d'Origine
 core.rename.submit=Renommer
 core.rename.success=Le renommage de {0} \u00E0 <a href\="{2}">{1}</a> a r\u00E9ussi
+core.rename.target.name.hint=Nom de la nouvelle page
+core.rename.target.name.label=Nom
+core.rename.target.parent.label=Parent
+core.rename.target.title.hint=Nouveau titre de la page
+core.rename.target.title.label=Nouveau titre
+core.rename.target.wiki.hint=Le Wiki vers lequel d\u00E9placer la page
+core.rename.target.wiki.label=Wiki
 core.rename.targetNotWritable=Vous n'avez pas les droits d'acc\u00E8s n\u00E9cessaires pour cr\u00E9er cette page
 core.rename.title=Renommage de {0}
 core.rename.title.newName=Nouveau nom du document
