[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
@@ -865,12 +865,12 @@ core.importer.availableDocuments=Paketinhalt
 core.importer.availablePackages=Verf\u00FCgbare Pakete
 core.importer.documentSelected=gew\u00E4hlte(s) Dokument(e)
 core.importer.import=Importieren
-core.importer.importAsBackup=Importieren als Sicherheitskopie
+core.importer.importAsBackup=Importieren als Sicherungskopie
 core.importer.importHistory=Historie importieren
 core.importer.noPackageAvailable=Es sind keine Pakete zum Import verf\u00FCgbar.
 core.importer.package=Paket
 core.importer.package.author=Autor
-core.importer.package.backup=Sicherheitskopie
+core.importer.package.backup=Sicherungskopie
 core.importer.package.description=Beschreibung
 core.importer.package.licence=Lizenz
 core.importer.package.version=Version
@@ -1437,7 +1437,7 @@ export=Export
 export_addhistory=Mit Historie
 export_author=Autor
 export_authorpreserved=Autor erhalten
-export_backuppack=Sicherheitskopie
+export_backuppack=Sicherungskopie
 export_description=Beschreibung
 export_licence=Lizenz
 export_packagename=Paketname
