[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_pt_BR.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_pt_BR.properties
@@ -1725,139 +1725,12 @@ passwordmissmatch=As duas senha n\u00E3o correspondem\!
 passwordrepeat=Senha (repita)
 pdf=PDF
 plaform.web.login.forgotUserNameOrPassword=Esqueceu seu {0}nome de usu\u00E1rio{1} ou {2}senha{3}?
-platform.appwithinminutes.appHomePageActionsHeading=A\u00E7\u00F5es
-platform.appwithinminutes.appHomePageAddEntryHint=Adicionar nova entrada
-platform.appwithinminutes.appHomePageAddEntryLabel=Adicionar
-platform.appwithinminutes.appHomePageDeleteAppLabel=Remover aplica\u00E7\u00E3o
-platform.appwithinminutes.appHomePageEditAppLabel=Editar aplica\u00E7\u00E3o
-platform.appwithinminutes.appHomePageEntryNameLabel=Nome da entrada\:
 platform.appwithinminutes.appHomePageTitle={0} P\u00E1gina Incial
-platform.appwithinminutes.appHomePageTranslateAppLabel=Traduzir aplica\u00E7\u00E3o
-platform.appwithinminutes.appLiveTableDeleteEntryActionName=Remover
-platform.appwithinminutes.appLiveTableEditEntryActionName=Editar
-platform.appwithinminutes.appLiveTableHeading=Entradas
-platform.appwithinminutes.appNameEmptyError=Por favor entre o nome da aplica\u00E7\u00E3o.
-platform.appwithinminutes.appNameHint=O nome da aplica\u00E7\u00E3o determina a URL da p\u00E1gina inicial. A p\u00E1gina inicial \u00E9 o espa\u00E7o onde a aplica\u00E7\u00E3o ser\u00E1 armazenada bem como a classe que vai descrever a estrutura da aplica\u00E7\u00E3o.
 platform.appwithinminutes.appNameInvalidClassNameError=N\u00E3o pudemos extrair um nome de classe v\u00E1lido do nome da aplica\u00E7\u00E3o informado. Tenha certeza de incluir letras al\u00E9m de n\u00FAmeros e caracteres de pontua\u00E7\u00E3o no nome da aplica\u00E7\u00E3o.
-platform.appwithinminutes.appNameIsUsedWarning=Essa aplica\u00E7\u00E3o j\u00E1 existe. Se voc\u00EA avan\u00E7ar para o pr\u00F3ximo passo estar\u00E1 editando a aplica\u00E7\u00E3o existente.
-platform.appwithinminutes.appNameLabel=Nome da aplica\u00E7\u00E3o
-platform.appwithinminutes.appNamePageTitle=Criar aplica\u00E7\u00E3o
-platform.appwithinminutes.appNamePreviewClassReferenceLabel=Classe da aplica\u00E7\u00E3o
-platform.appwithinminutes.appNamePreviewDataSpaceLabel=Espa\u00E7o de dados da aplica\u00E7\u00E3o
-platform.appwithinminutes.appNamePreviewHomePageUrlLabel=URL da p\u00E1gina inicial da aplica\u00E7\u00E3o
-platform.appwithinminutes.appPanelCreateEntry=Crie a sua\!
-platform.appwithinminutes.appsLiveTable._actions=A\u00E7\u00F5es
-platform.appwithinminutes.appsLiveTable.doc.author=\u00DAltimo Autor
-platform.appwithinminutes.appsLiveTable.doc.date=Data da Atualiza\u00E7\u00E3o
-platform.appwithinminutes.appsLiveTable.doc.space=Nome da Aplica\u00E7\u00E3o
-platform.appwithinminutes.appsLiveTableHeading=Aplica\u00E7\u00F5es
-platform.appwithinminutes.classEditorAdvancedCategoryName=Avan\u00E7ado
-platform.appwithinminutes.classEditorBindSheetSaveComment=Amarre a folha de estilo na classe
-platform.appwithinminutes.classEditorBooleanFieldName=Booleano
-platform.appwithinminutes.classEditorCanvasHint=Arraste os campos da lista e solte nessa \u00E1rea.
-platform.appwithinminutes.classEditorConfigureFieldLabel=Configurar
-platform.appwithinminutes.classEditorContentFieldName=Conte\u00FAdo
-platform.appwithinminutes.classEditorDBListFieldName=Lista de Banco de Dados
-platform.appwithinminutes.classEditorDateFieldName=Data
-platform.appwithinminutes.classEditorDatePickerAcceptSelectedDate=OK
-platform.appwithinminutes.classEditorDatePickerClearSelectedDate=Limpar
 platform.appwithinminutes.classEditorDatePickerFirstWeekDay=0
 platform.appwithinminutes.classEditorDatePickerMonthNames=Janeiro, Fevereiro, Mar\u00E7o, Abril, Maio, Junho, Julho, Agosto, Setembro, Outubro, Novembro, Dezembro
-platform.appwithinminutes.classEditorDatePickerSelectCurrentDate=Hoje
-platform.appwithinminutes.classEditorDatePickerSelectCurrentTime=Agora
 platform.appwithinminutes.classEditorDatePickerWeekDayNames=Domingo, Segunda, Ter\u00E7a, Quarta, Quinta, Sexta, S\u00E1bado
-platform.appwithinminutes.classEditorDeleteFieldLabel=Deletar
-platform.appwithinminutes.classEditorDocumentCategoryName=Documento
-platform.appwithinminutes.classEditorDuplicateFieldNameError=A classe tem dois campos com o mesmo nome\: {0}
-platform.appwithinminutes.classEditorFieldDefaultValueToolTip=Valor padr\u00E3o
-platform.appwithinminutes.classEditorGroupsFieldName=Grupo
-platform.appwithinminutes.classEditorMoveFieldHint=Arrastar e soltar para mudar a ordem
-platform.appwithinminutes.classEditorMoveFieldLabel=Mover
-platform.appwithinminutes.classEditorMultipleSheetsWarning=Essa classe tem mais de uma p\u00E1gina.
-platform.appwithinminutes.classEditorNumberFieldName=N\u00FAmero
-platform.appwithinminutes.classEditorPaletteHint=Arraste e solte os campos da lista para criar seu formul\u00E1rio.
-platform.appwithinminutes.classEditorPaletteTitle=Lista de Campos
-platform.appwithinminutes.classEditorPickersCategoryName=Selecionadores
-platform.appwithinminutes.classEditorPreviewFieldHint=Esconder painel de configura\u00E7\u00E3o e aplicar mudan\u00E7as
-platform.appwithinminutes.classEditorPreviewFieldLabel=Pr\u00E9-visualizar
-platform.appwithinminutes.classEditorSheetSaveComment=Atualize a p\u00E1gina da classe
-platform.appwithinminutes.classEditorStandardCategoryName=Padr\u00E3o
-platform.appwithinminutes.classEditorStaticListEditorAddItemLabel=Adicionar
-platform.appwithinminutes.classEditorStaticListEditorDeleteItemLabel=Remover
-platform.appwithinminutes.classEditorStaticListEditorItemIDLabel=ID
-platform.appwithinminutes.classEditorStaticListEditorItemValueLabel=Valor
-platform.appwithinminutes.classEditorStaticListFieldName=Lista Est\u00E1tica
-platform.appwithinminutes.classEditorStringFieldName=Linha de Texto
-platform.appwithinminutes.classEditorTemplateSaveComment=Atualize os valores padr\u00E3o
-platform.appwithinminutes.classEditorTextAreaFieldName=Caixa de Texto
-platform.appwithinminutes.classEditorTitleFieldName=T\u00EDtulo
-platform.appwithinminutes.classEditorTranslationsSaveComment=Atualize tradu\u00E7\u00F5es
-platform.appwithinminutes.classEditorUpdateSheetHint=Recriar a p\u00E1gina usada para exibir e editar objetos dessa classe ({0}).
-platform.appwithinminutes.classEditorUpdateSheetLabel=Atualizar p\u00E1gina da classe
-platform.appwithinminutes.classEditorUpdateTemplateHint=Salvar os valores padr\u00E3o no modelo da classe ({0}).
-platform.appwithinminutes.classEditorUpdateTemplateLabel=Atualizar modelo da classe
-platform.appwithinminutes.classEditorUpdateTranslationsHint=Atualize a tradu\u00E7\u00E3o de nomes de campos e lista de valores ({0}).
-platform.appwithinminutes.classEditorUpdateTranslationsLabel=Atualizar tradu\u00E7\u00E3o da classe
-platform.appwithinminutes.classEditorUsersFieldName=Usu\u00E1rio
-platform.appwithinminutes.createAppButtonLabel=Criar Aplica\u00E7\u00E3o
-platform.appwithinminutes.description=Criar aplica\u00E7\u00F5es web colaborativas em minutos, baseado no poderoso sistema de gerenciamento de dados estruturados da XWiki.
-platform.appwithinminutes.grantSpaceAdminRightsSaveComment=Fornecer permiss\u00F5es de administrador do espa\u00E7o.
-platform.appwithinminutes.homePageTitle=Aplica\u00E7\u00F5es em Minutos
-platform.appwithinminutes.liveTableEditorActionsColumnDescription=Uma lista de a\u00E7\u00F5es que podem ser executadas na aplica\u00E7\u00E3o,  tais como editar ou remover
-platform.appwithinminutes.liveTableEditorActionsColumnName=A\u00E7\u00F5es
-platform.appwithinminutes.liveTableEditorAddColumnHint=Adicionar
-platform.appwithinminutes.liveTableEditorAttachmentsColumnDescription=Uma coluna especial que exibe links para os anexos da p\u00E1gina
-platform.appwithinminutes.liveTableEditorAttachmentsColumnName=Anexos
-platform.appwithinminutes.liveTableEditorAvatarColumnDescription=Uma coluna especial para mostrar o avatar. Funciona somente se a tabela estiver conectada com uma classe XWiki.XWikiUsers
-platform.appwithinminutes.liveTableEditorAvatarColumnName=Avatar
-platform.appwithinminutes.liveTableEditorClassFieldColumnGroupLabel=Campos da Classe
-platform.appwithinminutes.liveTableEditorColumnsHint=Selecione as colunas que voc\u00EA deseja incluir na tabela din\u00E2mica mostrada na p\u00E1gina inicial da aplica\u00E7\u00E3o.
-platform.appwithinminutes.liveTableEditorDeleteColumnHint=Remover
-platform.appwithinminutes.liveTableEditorDeprecatedColumnsWarning=Algumas colunas est\u00E3o obsoletas. Possivelmente porque os campos correspondentes foram removidos. Voc\u00EA deseja remov\u00EA-las? <a href\="">Yes</a> / <a href\="">No</a>
-platform.appwithinminutes.liveTableEditorDescriptionHint=A descri\u00E7\u00E3o cont\u00E9m um curto resumo do que a aplica\u00E7\u00E3o faz e que tipos de dados ela vai manipular.
-platform.appwithinminutes.liveTableEditorDocAuthorColumnDescription=O usu\u00E1rio que editou por \u00FAltimo a aplica\u00E7\u00E3o
-platform.appwithinminutes.liveTableEditorDocAuthorColumnName=\u00DAltimo Autor
-platform.appwithinminutes.liveTableEditorDocCreationDateColumnDescription=A data em que a aplica\u00E7\u00E3o foi criada
-platform.appwithinminutes.liveTableEditorDocCreationDateColumnName=Data de Cria\u00E7\u00E3o
-platform.appwithinminutes.liveTableEditorDocCreatorColumnDescription=O usu\u00E1rio que criou a aplica\u00E7\u00E3o
-platform.appwithinminutes.liveTableEditorDocCreatorColumnName=Criador
-platform.appwithinminutes.liveTableEditorDocDateColumnDescription=A data em que a plica\u00E7\u00E3o foi editada pela \u00FAltima vez
-platform.appwithinminutes.liveTableEditorDocDateColumnName=\u00DAltima Atualiza\u00E7\u00E3o
-platform.appwithinminutes.liveTableEditorDocFullNameColumnDescription=O nome da p\u00E1gina que cont\u00E9m a aplica\u00E7\u00E3o prefixado com o nome do espa\u00E7o
-platform.appwithinminutes.liveTableEditorDocFullNameColumnName=Nome Completo da P\u00E1gina
-platform.appwithinminutes.liveTableEditorDocNameColumnDescription=O nome da p\u00E1gina que cont\u00E9m a aplica\u00E7\u00E3o
-platform.appwithinminutes.liveTableEditorDocNameColumnName=Nome da P\u00E1gina
-platform.appwithinminutes.liveTableEditorDocSpaceColumnDescription=O nome do espa\u00E7o que cont\u00E9m a aplica\u00E7\u00E3o
-platform.appwithinminutes.liveTableEditorDocSpaceColumnName=Espa\u00E7o
-platform.appwithinminutes.liveTableEditorDocTitleColumnDescription=O t\u00EDtulo da p\u00E1gina que cont\u00E9m a aplica\u00E7\u00E3o
-platform.appwithinminutes.liveTableEditorDocTitleColumnName=T\u00EDtulo da P\u00E1gina
-platform.appwithinminutes.liveTableEditorGenericColumnGroupLabel=Colunas Gen\u00E9ricas
-platform.appwithinminutes.liveTableEditorHelpDescription=Colunas da tabela din\u00E2mica gen\u00E9rica s\u00E3o independentes da estrutura de aplica\u00E7\u00E3o. Elas informam sobre as p\u00E1ginas que cont\u00E9m a sua aplica\u00E7\u00E3o.
-platform.appwithinminutes.liveTableEditorHelpTitle=Dica
-platform.appwithinminutes.liveTableEditorIcon=\u00CDcone
 platform.appwithinminutes.liveTableEditorIconHint=Vo\u00EA precisa informar uma refer\u00EAnia para um \u00EDcone 16x16px. Voc\u00EA pode selecionar um nome dos <a href\="{0}" target\="_blank">\u00EDcones padr\u00E3o</a> e usar o prefixo **icon\:**. Por exemplo\: **icon\:application**.
-platform.appwithinminutes.liveTableEditorImagesColumnDescription=Uma coluna especial que exibe imagens anexadas na p\u00E1gina
-platform.appwithinminutes.liveTableEditorImagesColumnName=Imagens
-platform.appwithinminutes.liveTableEditorMoveColumnHint=Arraste e solte para mudar a ordem
-platform.appwithinminutes.liveTableEditorSaveComment=Atualizar Tabela Din\u00E2mica
-platform.appwithinminutes.wizardStep1Description=Informe um nome para a sua aplica\u00E7\u00E3o.
-platform.appwithinminutes.wizardStep1Name=Nome
-platform.appwithinminutes.wizardStep1Title=De um nome para sua aplica\u00E7\u00E3o
-platform.appwithinminutes.wizardStep2Description=Crie a estrutura da sua aplica\u00E7\u00E3o informando que tipos de campo ela vai conter.
-platform.appwithinminutes.wizardStep2Name=Estrutura
-platform.appwithinminutes.wizardStep2Title=Defina a estrutura para a sua aplica\u00E7\u00E3o
-platform.appwithinminutes.wizardStep3Description=Personalize a p\u00E1gina inicial da sua aplica\u00E7\u00E3o.
-platform.appwithinminutes.wizardStep3Name=Apresenta\u00E7\u00E3o
-platform.appwithinminutes.wizardStep3Title=Personalize a p\u00E1gina inicial da sua aplica\u00E7\u00E3o
-platform.appwithinminutes.wizardStepFinishButtonLabel=Concluir
-platform.appwithinminutes.wizardStepFinishButtonTip=Vai para a p\u00E1gina inicial da aplica\u00E7\u00E3o
-platform.appwithinminutes.wizardStepHeading=Passo {0} \u2014 {1}
-platform.appwithinminutes.wizardStepHelpDescription=Esse assistente vai guiar voc\u00EA atrav\u00E9s da cria\u00E7\u00E3o da sua aplica\u00E7\u00E3o. Esses passos v\u00E3o configurar a maneira como sua aplica\u00E7\u00E3o vai ser exibida e que tipo de informa\u00E7\u00E3o ela vai conter\:
-platform.appwithinminutes.wizardStepHelpTitle=Passos
-platform.appwithinminutes.wizardStepNextButtonLabel=Pr\u00F3ximo Passo
-platform.appwithinminutes.wizardStepNextButtonTip=Vai para o pr\u00F3ximo passo
-platform.appwithinminutes.wizardStepPreviousButtonLabel=Passo Anterior
-platform.appwithinminutes.wizardStepPreviousButtonTip=Vai para o passo anterior
 platform.core.action.deleteAttachment.noAttachment=Esse anexo n\u00E3o existe.
 platform.core.action.objectRemove.invalidObject=Objeto informado n\u00E3o \u00E9 v\u00E1lido.
 platform.core.action.objectRemove.noClassnameSpecified=Tipo do objeto n\u00E3o foi informado.
@@ -3484,7 +3357,7 @@ xe.panels.quicklinks.blog=Blog
 xe.panels.quicklinks.dashboard=Painel Principal
 xe.panels.quicklinks.index=\u00CDndice de Documentos
 xe.panels.quicklinks.sandbox=Espa\u00E7o de Teste
-xe.panels.quicklinks.userdirectory=Dret\u00F3rio de Usu\u00E1rios
+xe.panels.quicklinks.userdirectory=Diret\u00F3rio de Usu\u00E1rios
 xe.panels.rights.accesslevels=Permiss\u00F5es
 xe.panels.rights.accesslevelsexplanation=Esse campo deve conter uma lista de permiss\u00F5es que voc\u00EA pode deseja aplicar para os usu\u00E1rios e grupos informados. As permiss\u00F5es dispon\u00EDveis s\u00E3o\: admin, programming, register, edit, view, comment. Para dar permiss\u00E3o de visualiza\u00E7\u00E3o e edi\u00E7\u00E3o use "view, edit". Para dar permiss\u00E3o para adicionar coment\u00E1rios use "comment".
 xe.panels.rights.allowdeny=Permitir/Negar
