--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_zh.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_zh.properties
@@ -719,8 +719,8 @@ core.importer.uploadPackage=\u4E0A\u4F20\u65B0\u5305
 core.links.content=\u5185\u5BB9
 core.menu.actions=\u52A8\u4F5C
 core.menu.admin=\u7BA1\u7406
-core.menu.admin.space=\u7BA1\u7406\u5458\u7A7A\u95F4
-core.menu.admin.wiki=\u7BA1\u7406\u5458Wiki
+core.menu.admin.space=\u7BA1\u7406\u7A7A\u95F4
+core.menu.admin.wiki=\u7BA1\u7406Wiki
 core.menu.content.title=\u9875\u9762\u52A8\u4F5C
 core.menu.copy=\u590D\u5236
 core.menu.create=\u521B\u5EFA
