[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -440,9 +440,9 @@ admin.messagestream.description=Activer ou d\u00E9sactiver les messages sur le w
 admin.ooserver=Serveur Office
 admin.ooserver.options=Options
 admin.ooserver.options.source=Ces options sont configur\u00E9es sur le serveur, dans {0}.
+admin.pageandchildrenrights.info=Ces droits s'appliquent uniquement \u00E0 cette page
 admin.pagerights=Droits sur la page
 admin.pagerights.description=G\u00E9rez les droits gr\u00E2ce aux groupes et utilisateurs \: contr\u00F4lez qui peut voir, modifier et supprimer la page (cela n'impacte pas les pages filles).
-admin.pagerights.info=Ces droits s'appliquent uniquement \u00E0 cette page
 admin.panels=Panels
 admin.panels.panelwizard.description=Ajoutez ou supprimez des panels, changez l'organisation des panels
 admin.panelwizard=Organiseur de panels
@@ -456,7 +456,6 @@ admin.registration=Inscriptions
 admin.registration.description=R\u00E9glages de l'enregistrement des utilisateurs
 admin.rights=Droits d'acc\u00E8s
 admin.rights.description=G\u00E9rez les droits d'acc\u00E8s pour les groupes et les utilisateurs \: contr\u00F4lez qui peut voir, modifier et supprimer les pages.
-admin.rights.info=Ces droits s''appliquent sur cette page {0}et tous {1}ses enfants{2}{3}.
 admin.save=Enregistrer
 admin.search=Recherche
 admin.search.description=Choisissez le moteur de recherche par d\u00E9faut ou configurez l'index Lucene.
