--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_nl.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_nl.properties
@@ -440,9 +440,9 @@ admin.messagestream.description=Berichtenstroom in- of uitschakelen in the wiki.
 admin.ooserver=Office Server
 admin.ooserver.options=Opties
 admin.ooserver.options.source=Deze opties zijn geconfigureerd op de server, in {0}.
+admin.pageandchildrenrights.info=Deze rechten zijn alleen van toepassing op deze pagina.
 admin.pagerights=Paginarechten
 admin.pagerights.description=Beheer de rechten van groepen en gebruikers\: bepaal wie de pagina kan bekijken, wijzigen en verwijderen. Deze rechten hebben geen invloed op de kinderen van deze pagina.
-admin.pagerights.info=Deze rechten zijn alleen van toepassing op deze pagina.
 admin.pagerights.infoNonTerminalDoc=De rechten hebben geen invloed op de rechten van de {0}kinderen{1}.
 admin.panels=Panelen
 admin.panels.panelwizard.description=Panelen toevoegen en verwijderen, pagina-layout aanpassen.
@@ -456,7 +456,6 @@ admin.registration=Registratie
 admin.registration.description=Beheer instellingen voor gebruikersregistratie.
 admin.rights=Rechten
 admin.rights.description=Beheer de rechten van gebruikers en groepen\: stel in wie pagina's kan zien, wijzigen en verwijderen.
-admin.rights.info=Deze rechten zijn van toepassing op deze pagina {0}en alle {1}kinderen{2}{3}.
 admin.save=Opslaan
 admin.search=Zoeken
 admin.search.description=Kies de standaard zoekmachine of configureer de zoek-index.
