--- a/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_fr.properties
+++ b/xwiki-platform-tools/xwiki-platform-tool-jetty/xwiki-platform-tool-jetty-listener/src/main/resources/org/xwiki/tools/jetty/listener/messages_fr.properties
@@ -1,2 +1,4 @@
 ## XWiki Translation for language fr generated from http://www.l10n.xwiki.org
 jetty.startup.notification=Le serveur a d\u00E9marr\u00E9. Vous pouvez maintenant acc\u00E9der \u00E0 votre wiki en entrant l'adresse {} dans votre navigateur internet.
+jetty.stopped.notification=Termin\u00E9 \!
+jetty.stopping.notification=Le serveur est en train de s'arr\u00EAter. Merci d'attendre que toutes les ressources soient lib\u00E9r\u00E9es...
